Revert "fixed earlier alignment issues"
This reverts commit b2fe1bc557a72a2b9db68ec017556f6f0da8fc6f.

--- a/ColorCode/frontend/static/css/index.css
+++ b/ColorCode/frontend/static/css/index.css
@@ -22,6 +22,7 @@ body {
 #prefs {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  min-width: 75%;
   margin: auto;
   text-align: center;
 }
@@ -37,7 +38,6 @@ text-align: left;
 #prefs td {
 border: 0px;
 padding: 2px;
-
 }
 
 /*******************/
